--- a/package.json
+++ b/package.json
@@ -7,58 +7,61 @@
     "build": "remix vite:build",
     "deploy": "wrangler pages deploy ./build/client",
     "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
     "typegen": "wrangler types"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.4",
-    "@headlessui/react": "^2.1.2",
-    "@heroicons/react": "^2.1.5",
-    "@marsidev/react-turnstile": "^0.7.2",
-    "@remix-run/cloudflare": "^2.10.3",
-    "@remix-run/cloudflare-pages": "^2.10.3",
-    "@remix-run/react": "^2.10.3",
-    "@supabase/ssr": "^0.4.0",
-    "@supabase/supabase-js": "^2.44.4",
-    "highlight.js": "^11.10.0",
-    "isbot": "^5.1.13",
+    "@formatjs/intl-localematcher": "^0.6.2",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
+    "@marsidev/react-turnstile": "^1.3.1",
+    "@remix-run/cloudflare": "^2.17.2",
+    "@remix-run/cloudflare-pages": "^2.17.2",
+    "@remix-run/react": "^2.17.2",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.79.0",
+    "highlight.js": "^11.11.1",
+    "isbot": "^5.1.32",
     "lodash": "^4.17.21",
-    "mapbox-gl": "^3.5.2",
-    "negotiator": "^0.6.3",
+    "mapbox-gl": "^3.16.0",
+    "negotiator": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-photo-album": "^3.0.0",
-    "react-turnstile": "^1.1.3",
-    "remix-utils": "^7.6.0",
-    "resend": "^3.5.0",
-    "yet-another-react-lightbox": "^3.21.1"
+    "react-photo-album": "^3.2.1",
+    "react-turnstile": "^1.1.4",
+    "remix-utils": "^9.0.0",
+    "resend": "^6.4.1",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240725.0",
-    "@remix-run/dev": "^2.10.3",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/lodash": "^4.17.7",
-    "@types/negotiator": "^0.6.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "postcss": "^8.4.40",
-    "supabase": "^1.187.3",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.5",
-    "vite-tsconfig-paths": "^4.3.2",
-    "wrangler": "3.67.1"
+    "@cloudflare/workers-types": "^4.20251014.0",
+    "@eslint/js": "^9.39.1",
+    "@remix-run/dev": "^2.17.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/lodash": "^4.17.20",
+    "@types/negotiator": "^0.6.4",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.39.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "supabase": "^2.54.11",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3",
+    "vite": "^6.4.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "3.114.15"
   },
   "engines": {
     "node": ">=20.0.0"
