--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@formatjs/intl-localematcher": "^0.6.2",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@mapbox/mapbox-gl-language": "^1.0.1",
     "@marsidev/react-turnstile": "^1.3.1",
     "@remix-run/cloudflare": "^2.17.2",
     "@remix-run/cloudflare-pages": "^2.17.2",
