--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-photo-album": "^3.2.1",
+    "react-router": "^7.9.5",
     "react-turnstile": "^1.1.4",
     "remix-utils": "^9.0.0",
     "resend": "^6.4.1",
