--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
+    "build": "react-router build",
     "deploy": "wrangler pages deploy ./build/client",
-    "dev": "remix vite:dev",
+    "dev": "react-router dev",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client",
-    "typecheck": "tsc",
+    "typecheck": "react-router typegen && tsc",
     "typegen": "wrangler types"
   },
   "dependencies": {
@@ -18,9 +18,8 @@
     "@heroicons/react": "^2.2.0",
     "@mapbox/mapbox-gl-language": "^1.0.1",
     "@marsidev/react-turnstile": "^1.3.1",
-    "@remix-run/cloudflare": "^2.17.2",
-    "@remix-run/cloudflare-pages": "^2.17.2",
-    "@remix-run/react": "^2.17.2",
+    "@react-router/cloudflare": "^7.0.0",
+    "@react-router/cloudflare-pages": "^7.0.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.79.0",
     "highlight.js": "^11.11.1",
@@ -40,7 +39,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251014.0",
     "@eslint/js": "^9.39.1",
-    "@remix-run/dev": "^2.17.2",
+    "@react-router/dev": "^7.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/lodash": "^4.17.20",
     "@types/negotiator": "^0.6.4",
