--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@heroicons/react": "^2.2.0",
     "@mapbox/mapbox-gl-language": "^1.0.1",
     "@marsidev/react-turnstile": "^1.3.1",
-    "@react-router/cloudflare": "^7.0.0",
-    "@react-router/cloudflare-pages": "^7.0.0",
+    "@react-router/cloudflare": "^7.9.5",
+    "@react-router/fs-routes": "^7.9.5",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.79.0",
     "highlight.js": "^11.11.1",
@@ -27,8 +27,8 @@
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.16.0",
     "negotiator": "^1.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-photo-album": "^3.2.1",
     "react-router": "^7.9.5",
     "react-turnstile": "^1.1.4",
@@ -39,12 +39,12 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251014.0",
     "@eslint/js": "^9.39.1",
-    "@react-router/dev": "^7.0.0",
+    "@react-router/dev": "^7.9.5",
     "@tailwindcss/forms": "^0.5.10",
     "@types/lodash": "^4.17.20",
     "@types/negotiator": "^0.6.4",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "autoprefixer": "^10.4.21",
@@ -57,12 +57,12 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "supabase": "^2.54.11",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "^6.4.1",
+    "vite": "^7.2.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "3.114.15"
+    "wrangler": "4.45.4"
   },
   "engines": {
     "node": ">=20.0.0"
