--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@eslint/js": "^9.39.1",
     "@react-router/dev": "^7.9.5",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/lodash": "^4.17.20",
     "@types/negotiator": "^0.6.4",
     "@types/react": "^19.2.2",
