--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "isbot": "^5.1.32",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.16.0",
+    "marked": "^15.0.11",
     "negotiator": "^1.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
