--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "react-router build",
     "deploy": "wrangler pages deploy ./build/client",
     "dev": "react-router dev",
+    "dev:cf": "wrangler pages dev",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "react-router typegen && tsc",
